--- a/css/undersider/forside.css
+++ b/css/undersider/forside.css
@@ -1,6 +1,7 @@
 main {
     background-color: #555;
-    height: 500px;
+    height: auto;
+    width: auto;
 }
 
 header{
@@ -14,4 +15,80 @@ header img {
 }
 header nav {
     grid-row: 2;
+}
+
+#video{
+    display: grid;
+    grid-template-columns: 1fr 5fr 1fr;
+    background-color: black;
+}
+iframe{
+    width: 100%;
+    grid-column: 2;
+    grid-row: 1/3;
+}
+
+#velkommen{
+    display: grid;
+    grid-template-columns: 1fr 5fr 1fr;
+
+}
+
+#velkommen_tekst{
+    grid-column: 2;
+}
+#facebook{
+    display: grid;
+    grid-template-columns: 1fr 2.5fr 2.5fr 1fr;
+}
+#facebook img{
+    grid-column: 2;
+    width: 100%;
+    height: auto;
+}
+.fb-page{
+    grid-column: 3;
+    width: 100%;
+    padding-left: 30px;
+    padding-top: 20px;
+
+}
+
+#filler1{
+    display: grid;
+    grid-template-columns: 1fr 5fr 1fr;
+}
+#filler2{
+    display: grid;
+    grid-template-columns: 1fr 5fr 1fr;
+
+}
+
+#filler1 img{
+    width: 100%;
+    height: auto;
+    grid-column: 2;
+    margin-top: 20px;
+}
+#filler2 img{
+    width: 100%;
+    height: auto;
+    grid-column: 2;
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+
+#menu_index{
+    display: grid;
+    grid-template-columns: 1fr 2.5fr 2.5fr 1fr;
+    margin-top: 20px;
+
+
+}
+#menu_index_tekst{
+    grid-column: 2;
+    
+}
+#menu_index img{
+    grid-column: 3;
 }
