--- a/css/undersider/about_us.css
+++ b/css/undersider/about_us.css
@@ -10,17 +10,27 @@ main {
 
 .grid1-2{
     display:grid;
-    grid-template-columns: 1fr 2fr;
+    grid-template-columns: 1fr 1.5fr;
     grid-column: 2/3;
     margin-left: 3vw;
     margin-right: 3vw;
     gap: 3vw;
-    text-align: center;
+    /* text-align: center; */
     padding-top: 5vw;
 }
 
 .grid1-2 section{
-    margin-top: 1vw;
+    /* margin-top: 1vw; */
+    vertical-align: middle;
+}
+
+.grid1-2 p,h2{
+    padding-left: 3vw;
+    padding-right: 3vw;
+}
+
+section p:nth-child(-n+3){
+    font-style: italic
 }
 
 .filler1{
@@ -41,4 +51,13 @@ main {
 #logoGrid{
     display: grid;
     grid-template-columns: 3fr 1fr 3fr;
+}
+
+h1, h2, p{
+    color: white;
+}
+
+.grid1-2 section{
+    background-color: rgba(255, 255, 255, 0.2);
+    border-radius: 1.5vw;
 }
