--- a/css/grund_layout.css
+++ b/css/grund_layout.css
@@ -3,15 +3,19 @@ body{
     padding: 0;
 }
 
-
+header{
+  background-color: rgba(0, 0, 0, 0.5);
+}
 
 
 /* nav */
 
 nav {
-    background-color: #264c44;
+    /* background-color: #264c44; */
+    text-shadow: 1px 1px 1px rgba(0, 0, 0, 1);
     
   }
+
   
   nav ul {
     list-style-type: none;
@@ -36,7 +40,7 @@ nav {
   }
   
   nav ul li a:hover {
-    background-color: #8e9426;
+    color: #8e9426;
   }
   
 /* nav */
@@ -45,15 +49,30 @@ nav {
 
 footer {
     display: grid;
-    grid-template-columns: 1fr 2.5fr 2.5fr 1fr;
-    background-color: #fdfdfd;
-    height: auto;
-    
+    grid-template-columns: 2fr 2fr 2fr;
+    height: 150px;
+    color: azure;
+    background-color: rgba(0, 0, 0, 0.5);
 }
 
 footer h2 {
   grid-column: 2;
   text-align: center;
+  padding-top: 75px;
+}
+footer #h3_1 {
+  grid-column: 1;
+  text-align: center;
+  padding-top: 75px;
+}
+footer #h3_2 {
+  grid-column: 3;
+  text-align: center;
+  padding-top: 75px;
+  list-style-type: none;
+}
+footer #h3_2 li{
+  margin: 5px;
 }
 
 /* Footer */
