--- a/css/undersider/events.css
+++ b/css/undersider/events.css
@@ -1,4 +1,55 @@
+
+body{
+    width: 100%;
+    height: 100vh;
+    background-image: url(/img/Background_bar.webp);
+    background-size: cover;
+    background-attachment: fixed;
+    
+}
+
 main {
-    background-color: #555;
-    height: 500px;
+    
+    
+    height: auto;
+}
+
+
+
+#event_all{
+    background-color: rgba(0, 0, 0, 0.5);
+    
+}
+
+#event_booking{
+    display: grid;
+    grid-template-columns: 1fr 3fr 2fr 1fr;
+    margin-bottom: 5vw;
+    padding-top: 5vw;
+}
+
+#event_booking_tekst{
+    color: azure;
+    grid-column: 2;
+    padding-top: 5vw;
+}
+#event_booking_tekst h1{
+    text-shadow: 1px 1px 1px rgba(0, 0, 0, 1);
+    font-weight: bold;
+}
+#event_booking_tekst p{
+    text-shadow: 1px 1px 1px rgba(0, 0, 0, 1);
+    
+}
+
+#div_form{
+    display: grid;
+    grid-template-columns: 1fr 2fr 2fr 2fr 1fr;
+    padding-bottom: 5vw;
+    color: azure;
+}
+
+#form1{
+    grid-column: 3;
+    
 }
