--- a/css/undersider/forside.css
+++ b/css/undersider/forside.css
@@ -1,5 +1,20 @@
+body{
+    width: 100%;
+    height: 100vh;
+    background-image: url(/img/Background_bar.webp);
+    background-size: cover;
+    background-attachment: fixed;
+    
+}
+
+#background_opacity{
+    background-color: rgba(0, 0, 0, 0.5);
+}
+
 main {
-    background-color: #555;
+    /* background-color: #555; */
+
+    
     height: auto;
     width: auto;
 }
@@ -20,7 +35,11 @@ header nav {
 #video{
     display: grid;
     grid-template-columns: 1fr 5fr 1fr;
-    background-color: black;
+    /* background-color: #121f42; */
+
+
+    padding-top: 5vw;
+   
 }
 iframe{
     width: 100%;
@@ -31,7 +50,10 @@ iframe{
 #velkommen{
     display: grid;
     grid-template-columns: 1fr 5fr 1fr;
-
+    color: azure;
+    text-shadow: 1px 1px 1px rgba(0, 0, 0, 1);
+    margin-top: 5vw;
+    margin-bottom: 10vw;
 }
 
 #velkommen_tekst{
@@ -40,6 +62,8 @@ iframe{
 #facebook{
     display: grid;
     grid-template-columns: 1fr 2.5fr 2.5fr 1fr;
+    margin-top: 10vw;
+    margin-bottom: 10vw;
 }
 #facebook img{
     grid-column: 2;
@@ -49,18 +73,25 @@ iframe{
 .fb-page{
     grid-column: 3;
     width: 100%;
-    padding-left: 30px;
-    padding-top: 20px;
+    padding-left: 3vw;
+    padding-top: 2vw;
 
 }
 
 #filler1{
     display: grid;
     grid-template-columns: 1fr 5fr 1fr;
+    
+
+    margin-top: 10vw;
+    margin-bottom: 10vw;
 }
 #filler2{
     display: grid;
     grid-template-columns: 1fr 5fr 1fr;
+    
+    margin-top: 10vw;
+   
 
 }
 
@@ -68,25 +99,29 @@ iframe{
     width: 100%;
     height: auto;
     grid-column: 2;
-    margin-top: 20px;
+    margin-top: 2vw;
 }
 #filler2 img{
     width: 100%;
     height: auto;
     grid-column: 2;
-    margin-top: 20px;
-    margin-bottom: 20px;
+    margin-top: 2vw;
+    margin-bottom: 2vw;
 }
 
 #menu_index{
     display: grid;
     grid-template-columns: 1fr 2.5fr 2.5fr 1fr;
-    margin-top: 20px;
+    margin-top: 2vw;
 
+    margin-top: 10vw;
+    margin-bottom: 10vw;
 
 }
 #menu_index_tekst{
     grid-column: 2;
+    text-align: center;
+    color: azure;
     
 }
 #menu_index img{
