--- a/css/undersider/events.css
+++ b/css/undersider/events.css
@@ -2,8 +2,7 @@
 body{
     width: 100%;
     height: 100vh;
-    background-image: url(/img/Background_bar.webp);
-    background-size: cover;
+    background-image: url(/Virksomhedssite_05/img/background_bar.webp);    background-size: cover;
     background-attachment: fixed;
     
 }
