--- a/css/undersider/forside.css
+++ b/css/undersider/forside.css
@@ -1,7 +1,7 @@
 body{
     width: 100%;
     height: 100vh;
-    background-image: url(/img/Background_bar.webp);
+    background-image: url(/Virksomhedssite_05/img/background_bar.webp);
     background-size: cover;
     background-attachment: fixed;
     
