--- a/css/undersider/about_us.css
+++ b/css/undersider/about_us.css
@@ -1,3 +1,7 @@
+img{
+    max-width: 100%;
+}
+
 main {
     background-color: #555;
     height: auto;
@@ -41,8 +45,6 @@ section p:nth-child(-n+3){
     width: 105%;
 }
 
-#OHLogo
-
 /* #OHLogo{
     text-align: center;
     padding: 3vw;
@@ -61,6 +63,13 @@ section h2{
 #logoGrid{
     display: grid;
     grid-template-columns: 3fr 1fr 3fr;
+}
+
+#OHLogo{
+    grid-column: 2/3;
+    justify-content: center;
+    margin-top: 5vw;
+    margin-bottom: 5vw;
 }
 
 h1, h2, p{
