--- a/css/undersider/about_us.css
+++ b/css/undersider/about_us.css
@@ -1,9 +1,17 @@
+body{
+    width: 100%;
+    height: 100vh;
+    background-image: url(/img/background_bar.webp);
+    background-size: cover;
+    background-attachment: fixed;
+}
+
 img{
     max-width: 100%;
 }
 
 main {
-    background-color: #555;
+    /* background-color: #555; */
     height: auto;
 }
 
@@ -23,10 +31,12 @@ main {
     padding-top: 5vw;
 }
 
-.grid1-2 section{
-    /* margin-top: 1vw; */
+/* .grid1-2 section{
+    margin-top: 1vw;
     vertical-align: middle;
-}
+    background-color: rgba(0, 0, 0, 0.61);
+    backdrop-filter: blur(5px);
+} */
 
 .grid1-2 p,h2{
     padding-left: 3vw;
@@ -45,17 +55,6 @@ section p:nth-child(-n+3){
     width: 105%;
 }
 
-/* #OHLogo{
-    text-align: center;
-    padding: 3vw;
-    margin: 3vw;
-    background-color: black;
-    color: white;
-    grid-column: 2/3;
-    border-radius: 50%;
-    border: solid rgb(200, 200, 200) 3px;
-} */
-
 section h2{
     text-align: center;
 }
@@ -70,10 +69,12 @@ section h2{
     justify-content: center;
     margin-top: 5vw;
     margin-bottom: 5vw;
+    background-color: rgba(255, 255, 255, 0.5);
+    border-radius: 50%;
 }
 
 h1, h2, p{
-    color: white;
+    color: rgb(0, 0, 0);
 }
 
 h2{
@@ -81,10 +82,17 @@ h2{
 }
 
 .grid1-2 section{
-    background-color: rgba(255, 255, 255, 0.2);
+    /* background-color: rgba(255, 255, 255, 0.2); */
     border-radius: 1.5vw;
+    vertical-align: middle;
+    background-color: rgba(255, 255, 255, 0.5);
+    backdrop-filter: blur(5px);
 }
 
-footer h1,h2,p{
+footer{
     color: black;
+}
+
+#background_opacity{
+    background-color: rgba(0, 0, 0, 0.5);
 }
