--- a/css/undersider/info.css
+++ b/css/undersider/info.css
@@ -1,4 +1,45 @@
 main {
     background-color: #555;
-    height: 500px;
+}
+
+h2{
+    color: white;
+
+}
+
+/* åbningstider */
+
+#opening-time{
+    text-align: center;
+}
+
+main ul{
+    padding: 0px;
+    color: white;
+    font-size: 2vw;
+}
+
+main ul li{
+   list-style-type: none;
+}
+
+/* guide */
+
+#guide{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+}
+
+#information{
+    grid-column: 1/2;
+    background-color: wheat;
+
+}
+
+#map{
+    grid-column: 2/3;
+    width: 100%;
+    height: 400px;
+    background-color: blueviolet;
+
 }
