--- a/css/undersider/info.css
+++ b/css/undersider/info.css
@@ -1,5 +1,20 @@
+body{
+    background-image: url(/img/background_bar.webp);
+    background-size: cover;
+    background-attachment: fixed;
+    /* height: 100vh; */
+    background-position: center center;
+}
+
 main {
-    background-color: #555;
+    height: auto;
+}
+
+#background_opacity{
+    background-color: rgba(0, 0, 0, 0.5);
+}
+
+footer{
 }
 
 h2{
@@ -16,7 +31,7 @@ h2{
 main ul{
     padding: 0px;
     color: white;
-    font-size: 2vw;
+    font-size: 1.5vw;
 }
 
 main ul li{
@@ -40,6 +55,4 @@ main ul li{
     grid-column: 2/3;
     width: 100%;
     height: 400px;
-    background-color: blueviolet;
-
 }
