--- a/css/undersider/about_us.css
+++ b/css/undersider/about_us.css
@@ -1,3 +1,28 @@
+@font-face {
+    font-family: "crimsonReg";
+    src: url(/fonts/crimson-text/CrimsonText-Regular.ttf);
+}
+
+@font-face {
+    font-family: "crimsonBold";
+    src: url(/fonts/crimson-text/CrimsonText-Bold.ttf);
+}
+
+@font-face {
+    font-family: "cormorantGaramondReg";
+    src: url(/fonts/cormorant-garamond/CormorantGaramond-Regular.ttf);
+}
+
+@font-face {
+    font-family: "cormorantGaramondItalic";
+    src: url(/fonts/cormorant-garamond/CormorantGaramond-Italic.ttf);
+}
+
+@font-face {
+    font-family: "cormorantGaramondBold";
+    src: url(/fonts/cormorant-garamond/CormorantGaramond-Bold.ttf);
+}
+
 body{
     width: 100%;
     height: 100vh;
@@ -77,8 +102,13 @@ h1, h2, p{
     color: rgb(0, 0, 0);
 }
 
-h2{
+p{
+    font-family: "cormorantGaramondReg";
+}
+
+h2, h1{
     font-size: 2vw;
+    font-family: "crimsonReg";
 }
 
 .grid1-2 section{
@@ -91,6 +121,12 @@ h2{
 
 footer{
     color: black;
+    background-color: rgba(255, 255, 255, 0.5);
+    backdrop-filter: blur(5px);
+    height: auto;
+    padding-left: 1vw;
+    padding-right: 1vw;
+    padding-bottom: 1vw;
 }
 
 #background_opacity{
