--- a/css/undersider/about_us.css
+++ b/css/undersider/about_us.css
@@ -55,6 +55,10 @@ main {
     /* text-align: center; */
     padding-top: 5vw;
 }
+.grid1-2 img{
+    grid-column: 1/2;
+}
+
 
 /* .grid1-2 section{
     margin-top: 1vw;
@@ -73,11 +77,7 @@ section p:last-child{
 }
 
 section p:nth-child(-n+3){
-    font-style: italic
-}
-
-.filler1{
-    width: 105%;
+    font-family: "cormorantGaramondItalic";
 }
 
 section h2{
@@ -121,7 +121,7 @@ h2, h1{
 
 footer{
     color: black;
-    background-color: rgba(255, 255, 255, 0.5);
+    background-color: rgba(200, 200, 200, 0.5);
     backdrop-filter: blur(5px);
     height: auto;
     padding-left: 1vw;
