--- a/css/undersider/info.css
+++ b/css/undersider/info.css
@@ -6,26 +6,44 @@ body{
     background-position: center center;
 }
 
+header{
+}
+
 main {
     height: auto;
 }
 
 #background_opacity{
     background-color: rgba(0, 0, 0, 0.5);
+    height: auto;
+    width: auto;
+}
+
+main h2{
+    color: white;
+    margin: 0%;
+    font-size: 3vw;
+}
+
+main h3{
+    color: white;
+    font-size: 2.2vw;
+}
+
+main p{
+    color: white;
+    font-size: 1.8vw;
 }
 
 footer{
 }
 
-h2{
-    color: white;
-
-}
-
 /* åbningstider */
 
 #opening-time{
+
     text-align: center;
+    padding: 3vw;
 }
 
 main ul{
@@ -47,12 +65,13 @@ main ul li{
 
 #information{
     grid-column: 1/2;
-    background-color: wheat;
-
+    padding: 2.5vw;
 }
 
 #map{
     grid-column: 2/3;
     width: 100%;
-    height: 400px;
+    width: 100%;
+    left: 0;
+    top: 0;
 }
