--- a/css/grund_layout.css
+++ b/css/grund_layout.css
@@ -53,6 +53,13 @@ footer {
     height: 150px;
     color: azure;
     background-color: rgba(0, 0, 0, 0.5);
+    color: black;
+    background-color: rgba(200, 200, 200, 0.5);
+    backdrop-filter: blur(5px);
+    height: auto;
+    padding-left: 1vw;
+    padding-right: 1vw;
+    padding-bottom: 1vw;
 }
 
 footer h2 {
