--- a/css/grund_layout.css
+++ b/css/grund_layout.css
@@ -49,6 +49,24 @@ nav {
     display: flex;
     justify-content: center;
   }
+  #nav_img{
+    display: grid;
+    grid-template-columns: 1fr 2fr 1fr;
+  }
+  
+  #nav_img a img{
+    width: 180px;
+    height: 105px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 1vw;
+    margin-top: 1.5vw;
+    
+  }
+  #nav_img a{
+    grid-column: 2;
+  }
   
   nav ul li {
     display: inline-block;
@@ -95,33 +113,38 @@ footer {
     grid-template-columns: 2fr 2fr 2fr;
     color: azure;
     background-color: rgba(0, 0, 0, 0.5);
-    color: black;
-    background-color: rgba(200, 200, 200, 0.5);
+    color: rgb(250, 250, 250);
+    background-color: rgba(62, 61, 61, 0.5);
     backdrop-filter: blur(5px);
     height: auto;
     padding-left: 1vw;
     padding-right: 1vw;
     padding-bottom: 1vw;
+    font-family: "crimsonBold";
 }
 
-footer h2 {
+footer h3 {
   grid-column: 2;
   text-align: center;
-  padding-top: 75px;
+  
 }
 footer #h3_1 {
   grid-column: 1;
   text-align: center;
-  padding-top: 75px;
+  
 }
 footer #h3_2 {
   grid-column: 3;
   text-align: center;
-  padding-top: 75px;
+  
   list-style-type: none;
 }
-footer #h3_2 li{
-  margin: 5px;
+footer #h3_2{
+  display: flex;
+  justify-content: space-evenly;
+  padding-top: 1vw;
+
+
 }
 
 /* Footer */
