--- a/css/grund_layout.css
+++ b/css/grund_layout.css
@@ -75,7 +75,7 @@ nav {
   
   nav ul li a {
     display: block;
-    color: #fff;
+    color: #efe2c6;
     text-decoration: none;
     padding: 10px 20px;
     /* border: solid rgb(255, 255, 255) 1px; */
@@ -85,7 +85,7 @@ nav {
   }
   
   nav ul li a:hover {
-    color: #fff;
+    color: #efe2c6;
   }
   nav ul li a::before {
     content: "";
@@ -95,7 +95,7 @@ nav {
     height: 2px;
     bottom: 0;
     left: 0;
-    background-color: #fff;
+    color: #efe2c6;
     transform: scaleX(0);
     transition: transform 0.3s ease;
   }
@@ -111,9 +111,8 @@ nav {
 footer {
     display: grid;
     grid-template-columns: 2fr 2fr 2fr;
-    color: azure;
+    color: #efe2c6;
     background-color: rgba(0, 0, 0, 0.5);
-    color: rgb(250, 250, 250);
     background-color: rgba(62, 61, 61, 0.5);
     backdrop-filter: blur(5px);
     height: auto;
