--- a/css/undersider/info.css
+++ b/css/undersider/info.css
@@ -24,12 +24,13 @@ main h2{
 
 main h3{
     color: white;
-    font-size: 2.2vw;
+    font-size: 2vw;
+    margin: 0;
 }
 
 main p{
     color: white;
-    font-size: 1.8vw;
+    font-size: 1.9vw;
 }
 
 /* åbningstider */
@@ -37,13 +38,14 @@ main p{
 #opening-time{
 
     text-align: center;
-    padding: 3vw;
+    padding-top: 3vw;
+    padding-bottom: 3vw;
 }
 
 main ul{
     padding: 0px;
     color: white;
-    font-size: 1.5vw;
+    font-size: 1.9vw;
 }
 
 main ul li{
@@ -59,7 +61,12 @@ main ul li{
 
 #information{
     grid-column: 1/2;
-    padding: 2.5vw;
+    width: 100%;
+    padding-left: 8vw;
+    padding-top: 6vw;
+}
+.info{
+    width: 90%;
 }
 
 #map{
