--- a/css/grund_layout.css
+++ b/css/grund_layout.css
@@ -87,7 +87,7 @@ nav {
     color: #efe2c6;
   }
   
-  a::before {
+  nav ul li a::before {
     content: "";
     position: absolute;
     display: block;
