--- a/css/grund_layout.css
+++ b/css/grund_layout.css
@@ -99,7 +99,7 @@ nav {
     transform: scaleX(0);
     transition: transform 0.3s ease;
   }
-  a:hover::before {
+  nav ul li a:hover::before {
     transform: scaleX(1);
   }
     
