--- a/css/undersider/forside.css
+++ b/css/undersider/forside.css
@@ -169,14 +169,14 @@ video{
 }
 #menu_index_tekst a{
     text-decoration: none;
-    border-style: solid;
+    /* border-style: solid; */
     color: #efe2c6;    
     padding: 0.5vw;
     border-radius: 15px;
     
 }
 #menu_index_tekst a:hover{
-    color: #8a880f;
+    color: #efe2c6;    
 }
 
 #menu_index_tekst h3{
@@ -190,3 +190,33 @@ video{
     border-radius: 25px;
     
 }
+
+/* animation til knap */
+a {
+    position: relative;
+    color: #efe2c6; 
+    text-decoration: none;
+  }
+  
+  a:hover {
+    color: #efe2c6; 
+  }
+  
+  a::before {
+    content: "";
+    position: absolute;
+    display: block;
+    width: 100%;
+    height: 2px;
+    bottom: 0;
+    left: 0;
+    background-color: #efe2c6;
+    transform: scaleX(0);
+    transition: transform 0.3s ease;
+  }
+  
+  a:hover::before {
+    transform: scaleX(1);
+  }
+  
+/* animation til knap */
