--- a/css/undersider/about_us.css
+++ b/css/undersider/about_us.css
@@ -31,8 +31,9 @@ body{
     background-attachment: fixed;
 }
 
-img{
+main img{
     max-width: 100%;
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.5);
 }
 
 main {
@@ -73,7 +74,9 @@ main {
 }
 
 section p:last-child{
-    font-size: 2vw;
+    font-size: 1.9vw;
+    padding-top: 3vw;
+    font-family: "cormorantGaramondBold";
 }
 
 section p:nth-child(-n+3){
@@ -94,12 +97,11 @@ section h2{
     justify-content: center;
     margin-top: 5vw;
     margin-bottom: 5vw;
-    background-color: rgba(255, 255, 255, 0.5);
-    border-radius: 50%;
+    /* background-color: rgba(255, 255, 255, 0.5); */
 }
 
 h1, h2, p{
-    color: rgb(0, 0, 0);
+    color: #efe2c6;
 }
 
 p{
@@ -115,18 +117,8 @@ h2, h1{
     /* background-color: rgba(255, 255, 255, 0.2); */
     border-radius: 1.5vw;
     vertical-align: middle;
-    background-color: rgba(255, 255, 255, 0.5);
-    backdrop-filter: blur(5px);
-}
-
-footer{
-    color: black;
-    background-color: rgba(200, 200, 200, 0.5);
-    backdrop-filter: blur(5px);
-    height: auto;
-    padding-left: 1vw;
-    padding-right: 1vw;
-    padding-bottom: 1vw;
+    background-color: rgba(0, 0, 0, 0.4);
+    backdrop-filter: blur(3px);
 }
 
 #background_opacity{
