--- a/css/undersider/events.css
+++ b/css/undersider/events.css
@@ -23,15 +23,31 @@ main {
 
 #event_booking{
     display: grid;
-    grid-template-columns: 1fr 3fr 2fr 1fr;
+    grid-template-columns: 0.7fr 3fr 2fr 1fr;
     margin-bottom: 5vw;
     padding-top: 5vw;
 }
+#event_booking img{
+    margin-left: 2vw;
+    width: 110%;
+    height: auto;
+    margin-top: 2.5vw;
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.5);
+    border-radius: 25px;
+    margin-bottom: 2vw;
+}
 
 #event_booking_tekst{
-    color: azure;
+    color: #efe2c6;
     grid-column: 2;
-    padding-top: 5vw;
+    padding-top: 4vw;
+    padding-right: 2vw;
+    padding-left: 2vw;
+    font-family: "cormorantGaramondItalic";
+    background-color: rgba(0, 0, 0, 0.4);
+    backdrop-filter: blur(0.1px);
+    border-radius: 1.5vw;
+    margin: 0;
 }
 #event_booking_tekst h1{
     text-shadow: 1px 1px 1px rgba(0, 0, 0, 1);
@@ -39,17 +55,30 @@ main {
 }
 #event_booking_tekst p{
     text-shadow: 1px 1px 1px rgba(0, 0, 0, 1);
-    
+    font-size: 1.2vw;
 }
 
 #div_form{
     display: grid;
-    grid-template-columns: 1fr 2fr 2fr 2fr 1fr;
+    grid-template-columns: 0.7fr 3fr 2fr 0.7fr;
     padding-bottom: 5vw;
-    color: azure;
-}
+    color: #efe2c6;}
 
 #form1{
-    grid-column: 3;
-    
+    grid-column: 2;
+    margin-left: 3vw;
 }
+
+#event_info{
+    grid-column: 3;
+    grid-row: 1;
+    color: #efe2c6;
+    padding-left: 5vw;
+    padding-top: 3vw;
+    background-color: rgba(0, 0, 0, 0.4);
+    backdrop-filter: blur(0.1px);
+    border-radius: 1.5vw;
+    margin: 0;
+    margin-left: 2vw;
+}
+
