--- a/css/undersider/forside.css
+++ b/css/undersider/forside.css
@@ -173,7 +173,7 @@ video{
     color: #efe2c6;    
     padding: 0.5vw;
     border-radius: 15px;
-    
+    font-size: 40px;
 }
 #menu_index_tekst a:hover{
     color: #efe2c6;    
@@ -192,17 +192,17 @@ video{
 }
 
 /* animation til knap */
-a {
+#menu_index a {
     position: relative;
     color: #efe2c6; 
     text-decoration: none;
   }
   
-  a:hover {
+  #menu_index a:hover {
     color: #efe2c6; 
   }
   
-  a::before {
+  #menu_index a::before {
     content: "";
     position: absolute;
     display: block;
@@ -215,7 +215,7 @@ a {
     transition: transform 0.3s ease;
   }
   
-  a:hover::before {
+  #menu_index a:hover::before {
     transform: scaleX(1);
   }
   
