--- a/css/undersider/info.css
+++ b/css/undersider/info.css
@@ -1,3 +1,28 @@
+@font-face {
+    font-family: "crimsonReg";
+    src: url(/fonts/crimson-text/CrimsonText-Regular.ttf);
+}
+
+@font-face {
+    font-family: "crimsonBold";
+    src: url(/fonts/crimson-text/CrimsonText-Bold.ttf);
+}
+
+@font-face {
+    font-family: "cormorantGaramondReg";
+    src: url(/fonts/cormorant-garamond/CormorantGaramond-Regular.ttf);
+}
+
+@font-face {
+    font-family: "cormorantGaramondItalic";
+    src: url(/fonts/cormorant-garamond/CormorantGaramond-Italic.ttf);
+}
+
+@font-face {
+    font-family: "cormorantGaramondBold";
+    src: url(/fonts/cormorant-garamond/CormorantGaramond-Bold.ttf);
+}
+
 body{
     background-image: url(/img/background_bar.webp);
     background-size: cover;
@@ -17,26 +42,25 @@ main {
 }
 
 main h2{
-    color: white;
+    color: #efe2c6;
     margin: 0%;
     font-size: 3vw;
 }
 
 main h3{
-    color: white;
+    color: #efe2c6;
     font-size: 2vw;
     margin: 0;
 }
 
 main p{
-    color: white;
+    color: #efe2c6;
     font-size: 1.9vw;
 }
 
 /* åbningstider */
 
 #opening-time{
-
     text-align: center;
     padding-top: 3vw;
     padding-bottom: 3vw;
@@ -44,7 +68,7 @@ main p{
 
 main ul{
     padding: 0px;
-    color: white;
+    color: #efe2c6;
     font-size: 1.9vw;
 }
 
@@ -74,3 +98,7 @@ main ul li{
     width: 100%;
     height: 40vw;
 }
+
+/* footer{
+    margin-top: 3vw;
+} */
