--- a/css/undersider/info.css
+++ b/css/undersider/info.css
@@ -28,7 +28,7 @@ body{
     background-size: cover;
     background-attachment: fixed;
     /* height: 100vh; */
-    background-position: center center;
+    /* background-position: center center; */
 }
 
 main {
@@ -43,12 +43,14 @@ main {
 
 main h2{
     color: #efe2c6;
+    font-family: "crimsonReg";
     margin: 0%;
     font-size: 3vw;
 }
 
 main h3{
     color: #efe2c6;
+    font-family: "crimsonReg";
     font-size: 2vw;
     margin: 0;
 }
@@ -56,19 +58,35 @@ main h3{
 main p{
     color: #efe2c6;
     font-size: 1.9vw;
+    font-family: "cormorantGaramondReg"
 }
 
 /* åbningstider */
+
+.grid2-1-2{
+    display: grid;
+    grid-template-columns: 2fr 1fr 2fr;
+}
 
 #opening-time{
     text-align: center;
     padding-top: 3vw;
     padding-bottom: 3vw;
+    display: grid;
+    grid-column: 2/3;
+    background-color: rgba(0, 0, 0, 0.4);
+    backdrop-filter: blur(3px);
+    border-radius: 1.5vw;
+    margin-bottom: 2vw;
+    margin-top: 2vw;
+    border: double #efe2c6 3px;
+    /* border stling ikke endelig, måske ikke nødvendig */
 }
 
 main ul{
     padding: 0px;
     color: #efe2c6;
+    font-family: "crimsonReg";
     font-size: 1.9vw;
 }
 
@@ -81,13 +99,16 @@ main ul li{
 #guide{
     display: grid;
     grid-template-columns: 1fr 1fr;
+    padding-bottom: 2vw;
 }
 
 #information{
     grid-column: 1/2;
-    width: 100%;
+    /* width: 100%; */
     padding-left: 8vw;
     padding-top: 6vw;
+    background-color: rgba(0, 0, 0, 0.4);
+    backdrop-filter: blur(3px);
 }
 .info{
     width: 90%;
@@ -98,7 +119,3 @@ main ul li{
     width: 100%;
     height: 40vw;
 }
-
-/* footer{
-    margin-top: 3vw;
-} */
