--- a/css/undersider/forside.css
+++ b/css/undersider/forside.css
@@ -23,7 +23,7 @@
     src: url(/fonts/cormorant-garamond/CormorantGaramond-Bold.ttf);
 }
 
-
+@media (min-width: 600px) {
 
 body{
     width: 100%;
@@ -120,7 +120,7 @@ video{
     grid-template-columns: 1fr 5fr 1fr;
     
 
-    margin-top: 2vw;
+
     margin-bottom: 3vw;
 }
 #filler2{
@@ -220,3 +220,189 @@ video{
   }
   
 /* animation til knap */
+
+
+}
+
+body{
+    width: 100%;
+    height: 100vh;
+    background-image: url(/img/background_bar.webp);
+    background-size: cover;
+    background-attachment: fixed;
+    
+}
+
+#background_opacity{
+    background-color: rgba(0, 0, 0, 0.5);
+}
+
+main {
+    /* background-color: #555; */
+    height: auto;
+    width: auto;
+}
+#velkommen{
+    color: #efe2c6;
+    text-shadow: 1px 1px 1px rgb(0, 0, 0);
+    margin-top: 5vw;
+    margin-bottom: 5vw;
+    text-align: center;
+}
+#velkommen_tekst{
+    grid-column: 2;
+    border-radius: 1.5vw;
+    vertical-align: middle;
+    background-color: rgba(0, 0, 0, 0.4);
+    backdrop-filter: blur(0.1px);
+    padding-left: 1vw;
+    padding-right: 1vw;
+    font-family: "cormorantGaramondItalic";
+}
+#facebook{
+    /* margin-top: 10vw; */
+    
+}
+#facebook img{
+    width: 100%;
+    height: auto;
+    margin-top: 2.5vw;
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.5);
+    border-radius: 25px;
+}
+.fb-page{
+    width: 100%;
+    padding-left: 3vw;
+   
+
+}
+
+#filler1{
+    margin-bottom: 3vw;
+}
+#filler2{
+    margin-top: 3vw;
+   
+
+}
+
+#filler1 img{
+    width: 100%;
+    height: auto;
+    margin-top: 5vw;
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.5);
+    border-radius: 25px;
+      
+}
+#filler2 img{
+    width: 100%;
+    height: auto;
+    margin-bottom: 2vw;
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.5);
+    border-radius: 25px;
+    
+}
+
+#menu_index{
+   
+}
+#menu_index_tekst{
+    text-align: center;
+    color: #efe2c6;    
+    padding-top: 3vw;
+    font-family: "cormorantGaramondBold";
+    text-decoration: none;
+    font-family: "cormorantGaramondItalic";
+    text-shadow: 1px 1px 1px rgb(0, 0, 0);
+    
+}
+#menu_index_tekst a{
+    text-decoration: none;
+    /* border-style: solid; */
+    color: #efe2c6;    
+    padding: 0.5vw;
+    border-radius: 15px;
+    font-size: 40px;
+}
+#menu_index_tekst a:hover{
+    color: #efe2c6;    
+}
+
+#menu_index_tekst h3{
+    margin-top: 2vw;
+   
+}
+#menu_index img{
+    width: 100%;
+    height: auto;
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.5);
+    border-radius: 25px;
+    
+}
+
+/* animation til knap */
+#menu_index a {
+    position: relative;
+    color: #efe2c6; 
+    text-decoration: none;
+  }
+  
+  #menu_index a:hover {
+    color: #efe2c6; 
+  }
+  
+  #menu_index a::before {
+    content: "";
+    position: absolute;
+    display: block;
+    width: 100%;
+    height: 2px;
+    bottom: 0;
+    left: 0;
+    background-color: #efe2c6;
+    transform: scaleX(0);
+    transition: transform 0.3s ease;
+  }
+  
+  #menu_index a:hover::before {
+    transform: scaleX(1);
+  }
+
+  video{
+    padding-top: 2.5vw;
+    width: 100%;
+    height: auto;
+    
+}
+
+@media (max-width: 600px) {
+
+video{
+    margin-top: 5vw;
+}
+
+#menu_index_tekst h3{
+    margin-top: 2vw;
+    margin-bottom: 10vw;
+}
+
+#facebook img{
+    margin-bottom: 5vw;
+}
+
+#filler1{
+    margin-top: 2vw;
+    margin-bottom: 3vw;
+}
+.fb-page{
+    width: 100%;
+    padding-left: 0vw;
+}
+
+
+}
+
+
+
+
+
