--- a/css/undersider/about_us.css
+++ b/css/undersider/about_us.css
@@ -33,31 +33,11 @@ body{
 
 main img{
     max-width: 100%;
-    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.5);
 }
 
 main {
     /* background-color: #555; */
     height: auto;
-}
-
-.om-os{
-    display: grid;
-    grid-template-columns: 1fr 8fr 1fr;
-}
-
-.grid1-2{
-    display:grid;
-    grid-template-columns: 1fr 1.5fr;
-    grid-column: 2/3;
-    margin-left: 3vw;
-    margin-right: 3vw;
-    gap: 3vw;
-    /* text-align: center; */
-    padding-top: 5vw;
-}
-.grid1-2 img{
-    grid-column: 1/2;
 }
 
 
@@ -68,14 +48,13 @@ main {
     backdrop-filter: blur(5px);
 } */
 
-.grid1-2 p,h2{
-    padding-left: 3vw;
-    padding-right: 3vw;
+section p{
+    font-size: 3vw;
 }
 
 section p:last-child{
-    font-size: 1.9vw;
-    padding-top: 3vw;
+    font-size: 5vw;
+    padding-bottom: 3vw;
     font-family: "cormorantGaramondBold";
 }
 
@@ -87,19 +66,6 @@ section h2{
     text-align: center;
 }
 
-#logoGrid{
-    display: grid;
-    grid-template-columns: 3fr 1fr 3fr;
-}
-
-#OHLogo{
-    grid-column: 2/3;
-    justify-content: center;
-    margin-top: 5vw;
-    margin-bottom: 5vw;
-    /* background-color: rgba(255, 255, 255, 0.5); */
-}
-
 h1, h2, p{
     color: #efe2c6;
 }
@@ -109,18 +75,90 @@ p{
 }
 
 h2, h1{
-    font-size: 2vw;
+    font-size: 5vw;
     font-family: "crimsonReg";
 }
 
-.grid1-2 section{
+section{
     /* background-color: rgba(255, 255, 255, 0.2); */
-    border-radius: 1.5vw;
+    /* border-radius: 1.5vw; */
     vertical-align: middle;
     background-color: rgba(0, 0, 0, 0.4);
     backdrop-filter: blur(3px);
+    padding-left: 2vw;
+    padding-right: 2vw;
+}
+
+#OHLogo{
+    scale: 70%;
 }
 
 #background_opacity{
     background-color: rgba(0, 0, 0, 0.5);
+}
+
+@media (min-width:600px){    
+    .om-os{
+        display: grid;
+        grid-template-columns: 1fr 8fr 1fr;
+    }
+    
+    .grid1-2{
+        display:grid;
+        grid-template-columns: 1fr 1.5fr;
+        grid-column: 2/3;
+        margin-left: 3vw;
+        margin-right: 3vw;
+        gap: 3vw;
+        /* text-align: center; */
+        padding-top: 5vw;
+    }
+    .grid1-2 img{
+        grid-column: 1/2;
+    }  
+
+    .grid1-2 p,h2{
+        padding-left: 3vw;
+        padding-right: 3vw;
+    }
+
+    section p{
+        font-size: 1.1vw;
+    }
+
+    section p:last-child{
+        font-size: 1.9vw;
+        padding-top: 1vw;
+        padding-bottom: 1vw;
+        margin-bottom: 0;
+        margin-top: 3.7vw;
+    }
+
+    h2, h1{
+        font-size: 2vw;
+    }
+
+    #logoGrid{
+        display: grid;
+        grid-template-columns: 3fr 1fr 3fr;
+    }
+
+    section{
+        padding-left: 0vw;
+        padding-right: 0vw;
+        border-radius: 1.5vw;
+    }
+
+    #OHLogo{
+        margin-top: 5vw;
+        margin-bottom: 5vw;
+        /* background-color: rgba(255, 255, 255, 0.5); */
+        scale: auto;
+    }
+
+    #logoA{
+        grid-column: 2/3;
+        justify-content: center;
+    }
+
 }
