--- a/css/undersider/forside.css
+++ b/css/undersider/forside.css
@@ -260,6 +260,13 @@ main {
     padding-right: 1vw;
     font-family: "cormorantGaramondItalic";
 }
+
+#velkommen_tekst h1{
+    font-family: "crimsonReg";
+}
+#velkommen_tekst p{
+    font-size: 1.4vw;
+}
 #facebook img{
     width: 100%;
     height: auto;
