--- a/css/undersider/info.css
+++ b/css/undersider/info.css
@@ -28,7 +28,7 @@ body{
     background-size: cover;
     background-attachment: fixed;
     /* height: 100vh; */
-    /* background-position: center center; */
+    background-position: center center;
 }
 
 main {
@@ -101,6 +101,7 @@ main ul li{
     grid-template-columns: 1fr 1fr;
 }
 
+
 #information{
     grid-column: 1/2;
     /* width: 100%; */
@@ -109,6 +110,7 @@ main ul li{
     background-color: rgba(0, 0, 0, 0.4);
     backdrop-filter: blur(3px);
 }
+
 .info{
     width: 90%;
 }
@@ -122,3 +124,218 @@ main ul li{
     width: 100%;
     height: 40vw;
 }
+
+
+
+
+
+/* @media */
+
+body{
+    background-image: url(/img/background_bar.webp);
+    background-size: cover;
+    background-attachment: fixed;
+    /* height: 100vh; */
+    background-position: center center;
+}
+
+main {
+    height: auto;
+}
+
+#background_opacity{
+    background-color: rgba(0, 0, 0, 0.5);
+    height: auto;
+    width: auto;
+}
+
+main h2{
+    color: #efe2c6;
+    font-family: "crimsonReg";
+    margin: 0%;
+    font-size: 3vw;
+}
+
+main h3{
+    color: #efe2c6;
+    font-family: "crimsonReg";
+    font-size: 2vw;
+    margin: 0;
+}
+
+main p{
+    color: #efe2c6;
+    font-size: 1.9vw;
+    font-family: "cormorantGaramondReg"
+}
+
+/* åbningstider */
+
+.grid2-1-2{
+    display: grid;
+    grid-template-columns: 2fr 1fr 2fr;
+}
+
+#opening-time{
+    text-align: center;
+    padding-top: 3vw;
+    padding-bottom: 3vw;
+    display: grid;
+    grid-column: 2/3;
+    background-color: rgba(0, 0, 0, 0.4);
+    backdrop-filter: blur(3px);
+    border-radius: 1.5vw;
+    margin-bottom: 2vw;
+    margin-top: 2vw;
+    /* border: double #efe2c6 3px; */
+    /* border stiling ikke endelig, måske ikke nødvendig */
+}
+
+main ul{
+    padding: 0px;
+    color: #efe2c6;
+    font-family: "crimsonReg";
+    font-size: 1.9vw;
+}
+
+main ul li{
+   list-style-type: none;
+}
+
+/* guide */
+
+#guide{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+}
+
+
+#information{
+    grid-column: 1/2;
+    /* width: 100%; */
+    padding-left: 8vw;
+    padding-top: 6vw;
+    background-color: rgba(0, 0, 0, 0.4);
+    backdrop-filter: blur(3px);
+}
+
+.info{
+    width: 90%;
+}
+
+.info p{
+    margin-top: 4.5vw;
+}
+
+#map{
+    grid-column: 2/3;
+    width: 100%;
+    height: 40vw;
+}
+
+
+
+
+
+
+body{
+    background-image: url(/img/background_bar.webp);
+    background-size: cover;
+    background-attachment: fixed;
+    /* height: 100vh; */
+    background-position: center center;
+}
+
+main {
+    height: auto;
+}
+
+#background_opacity{
+    background-color: rgba(0, 0, 0, 0.5);
+    height: auto;
+    width: auto;
+}
+
+main h2{
+    color: #efe2c6;
+    font-family: "crimsonReg";
+    margin: 0%;
+    font-size: 3vw;
+}
+
+main h3{
+    color: #efe2c6;
+    font-family: "crimsonReg";
+    font-size: 2vw;
+    margin: 0;
+}
+
+main p{
+    color: #efe2c6;
+    font-size: 1.9vw;
+    font-family: "cormorantGaramondReg"
+}
+
+/* åbningstider */
+
+.grid2-1-2{
+    display: grid;
+    grid-template-columns: 2fr 1fr 2fr;
+}
+
+#opening-time{
+    text-align: center;
+    padding-top: 3vw;
+    padding-bottom: 3vw;
+    display: grid;
+    grid-column: 2/3;
+    background-color: rgba(0, 0, 0, 0.4);
+    backdrop-filter: blur(3px);
+    border-radius: 1.5vw;
+    margin-bottom: 2vw;
+    margin-top: 2vw;
+    /* border: double #efe2c6 3px; */
+    /* border stiling ikke endelig, måske ikke nødvendig */
+}
+
+main ul{
+    padding: 0px;
+    color: #efe2c6;
+    font-family: "crimsonReg";
+    font-size: 1.9vw;
+}
+
+main ul li{
+   list-style-type: none;
+}
+
+/* guide */
+
+#guide{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+}
+
+
+#information{
+    grid-column: 1/2;
+    /* width: 100%; */
+    padding-left: 8vw;
+    padding-top: 6vw;
+    background-color: rgba(0, 0, 0, 0.4);
+    backdrop-filter: blur(3px);
+}
+
+.info{
+    width: 90%;
+}
+
+.info p{
+    margin-top: 4.5vw;
+}
+
+#map{
+    grid-column: 2/3;
+    width: 100%;
+    height: 40vw;
+} 
