--- a/css/grund_layout.css
+++ b/css/grund_layout.css
@@ -83,21 +83,21 @@ nav {
     font-family: "cormorantGaramondBold";
   }
   
-  nav ul li a:hover {
+  /* nav ul li a:hover {
     color: #efe2c6;
-  }
+  } */
   
   nav ul li a::before {
     content: "";
     position: absolute;
     display: block;
     width: 100%;
-    height: 2px;
+    height: 1px;
     bottom: 0;
     left: 0;
     background-color: #efe2c6;
     transform: scaleX(0);
-    transition: transform 0.3s ease;
+    transition: transform 0.8s ease;
   }
   nav ul li a:hover::before {
     transform: scaleX(1);
