--- a/css/undersider/galleri.css
+++ b/css/undersider/galleri.css
@@ -1,4 +1,9 @@
-main {
-    background-color: #555;
-    height: 500px;
+body{
+    width: 100%;
+    height: 100vh;
+    background-image: url(/img/background_bar.webp);
+    background-size: cover;
+    background-attachment: fixed;
 }
+
+
