--- a/css/undersider/forside.css
+++ b/css/undersider/forside.css
@@ -390,7 +390,12 @@ video{
     margin-top: 2vw;
     margin-bottom: 10vw;
 }
-
+#menu_index_tekst{
+    font-size: 3vw;
+}
+#menu_index_tekst a{
+    font-size: 10vw;
+}
 #facebook img{
     margin-bottom: 5vw;
 }
