--- a/css/grund_layout.css
+++ b/css/grund_layout.css
@@ -26,7 +26,7 @@
 body{
     margin: 0;
     padding: 0;
-    background-image: url(/img/background_bar.webp);
+    /* background-image: url(img); */
 }
 
 header{
