--- a/css/undersider/forside.css
+++ b/css/undersider/forside.css
@@ -28,7 +28,7 @@
 body{
     width: 100%;
     height: 100vh;
-    background-image: url(../../img/background_bar.webp);
+    /* background-image: url(img/background_bar.webp); */
     background-size: cover;
     background-attachment: fixed;
     
@@ -228,7 +228,7 @@ video{
 body{
     width: 100%;
     height: 100vh;
-    background-image: url(/img/background_bar.webp);
+    /* background-image: url(/img/background_bar.webp); */
     background-size: cover;
     background-attachment: fixed;
     
